--- a/package.json
+++ b/package.json
@@ -8,18 +8,38 @@
   },
   "private": true,
   "dependencies": {
-    "@aws/nx-plugin": "0.64.1"
+    "@aws/nx-plugin": "0.64.1",
+    "aws-cdk": "2.1033.0",
+    "aws-cdk-lib": "2.230.0",
+    "constructs": "10.4.3",
+    "esbuild": "0.27.0",
+    "source-map-support": "0.5.21"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@nx/eslint": "22.1.3",
+    "@nx/eslint-plugin": "22.1.3",
     "@nx/js": "22.1.3",
+    "@nx/vitest": "22.1.3",
     "@nx/workspace": "22.1.3",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "22.19.1",
+    "@vitest/coverage-v8": "^4.0.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-prettier": "5.5.4",
+    "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "2.4.1",
     "nx": "22.1.3",
-    "prettier": "^2.6.2",
+    "prettier": "3.6.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
+    "tsx": "4.20.6",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
+    "vitest": "^4.0.0"
   },
   "type": "module"
 }
