--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,12 @@
   "extends": "./tsconfig.base.json",
   "compileOnSave": false,
   "files": [],
-  "references": []
+  "references": [
+    {
+      "path": "./packages/infra"
+    },
+    {
+      "path": "./packages/common/constructs"
+    }
+  ]
 }
