--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,25 @@
 [project]
 name = "nx-workspace"
 version = "1.0.0"
-dependencies = [ "idp_v2.backend", "idp_v2.idp_agent" ]
+dependencies = [
+ "boto3>=1.42.0",
+ "fastapi[standard]>=0.123.0",
+ "idp_v2.backend",
+ "idp_v2.backend",
+ "idp_v2.idp_agent",
+ "lancedb>=0.26.0",
+ "polars>=1.36.1",
+ "pydantic>=2.12.5",
+ "ruff>=0.14.10",
+ "tantivy>=0.25.1",
+]
 
 [tool.uv.workspace]
-members = [ "packages/agents/idp-agent/idp_agent", "packages/backend" ]
+members = [
+  "packages/agents/idp-agent/idp_agent",
+  "packages/backend",
+  "packages/backend"
+]
 
 [tool.uv.sources."idp_v2.backend"]
 workspace = true
@@ -19,5 +34,5 @@ dev = [
   "pytest>=8.3.4",
   "pytest-sugar>=1.0.0",
   "pytest-cov>=6.0.0",
-  "pytest-html>=4.1.1"
+  "pytest-html>=4.1.1",
 ]
