--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,8 @@
     "paths": {
       ":idp-v2/common-constructs": ["packages/common/constructs/src/index.ts"],
       ":idp-v2/frontend": ["packages/frontend/src/index.ts"],
-      ":idp-v2/infra": ["packages/infra/src/index.ts"]
+      ":idp-v2/infra": ["packages/infra/src/index.ts"],
+      ":idp-v2/backend": ["packages/backend/src/index.ts"]
     }
   }
 }
