--- a/package.json
+++ b/package.json
@@ -8,18 +8,34 @@
   },
   "private": true,
   "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "2.233.0-alpha.0",
+    "@aws-crypto/sha256-browser": "^5.2.0",
+    "@aws-sdk/client-ssm": "^3.958.0",
+    "@aws-sdk/credential-providers": "^3.958.0",
     "@aws/nx-plugin": "0.64.1",
+    "@hono/node-server": "^1.19.7",
+    "@hono/standard-validator": "^0.2.1",
+    "@hono/swagger-ui": "^0.5.3",
+    "@lancedb/lancedb": "^0.23.0",
+    "@smithy/protocol-http": "^5.3.7",
+    "@smithy/signature-v4": "^5.3.7",
     "@tanstack/react-router": "1.139.7",
+    "@valibot/to-json-schema": "^1.5.0",
+    "apache-arrow": "^21.1.0",
     "aws-cdk": "2.1033.0",
     "aws-cdk-lib": "2.230.0",
+    "aws4fetch": "^1.0.20",
     "constructs": "10.4.3",
     "esbuild": "0.27.0",
+    "hono": "^4.11.3",
+    "hono-openapi": "^1.1.2",
     "oidc-client-ts": "3.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-oidc-context": "3.3.0",
     "source-map-support": "0.5.21",
-    "tailwindcss": "4.1.17"
+    "tailwindcss": "4.1.17",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
     "@aws-cdk/aws-bedrock-agentcore-alpha": "2.229.1-alpha.0",
@@ -32,6 +48,7 @@
     "@nx/vitest": "22.1.3",
     "@nx/web": "22.1.3",
     "@nx/workspace": "22.1.3",
+    "@nxlv/python": "21.2.0",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.29",
@@ -43,7 +60,6 @@
     "@tanstack/virtual-file-routes": "1.139.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.3.0",
-    "@nxlv/python": "21.2.0",
     "@types/node": "22.19.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
