--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ Thumbs.db
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
 CLAUDE.md
+.env.local
 
 vitest.config.*.timestamp*
 /reports
