Add project/document CRUD with WebSocket progress

--- a/packages/backend/project.json
+++ b/packages/backend/project.json
@@ -86,6 +86,15 @@
     "update": {
       "executor": "@nxlv/python:update",
       "options": {}
+    },
+    "openapi": {
+      "executor": "@nxlv/python:run-commands",
+      "outputs": ["{workspaceRoot}/dist/packages/backend/openapi"],
+      "options": {
+        "command": "uv run python scripts/export_openapi.py",
+        "cwd": "{projectRoot}"
+      },
+      "cache": true
     }
   },
   "metadata": {
