--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lancedb/lancedb": "^0.23.0",
     "@smithy/protocol-http": "^5.3.7",
     "@smithy/signature-v4": "^5.3.7",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-router": "1.139.7",
     "@valibot/to-json-schema": "^1.5.0",
     "apache-arrow": "^21.1.0",
@@ -33,7 +34,9 @@
     "oidc-client-ts": "3.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "react-oidc-context": "3.3.0",
+    "remark-gfm": "^4.0.1",
     "source-map-support": "0.5.21",
     "tailwindcss": "4.1.17",
     "valibot": "^1.2.0"
