feat: S3 세션 스토리지를 통한 채팅 히스토리 저장 기능 추가
- S3에서 메시지를 가져오는 채팅 히스토리 API 엔드포인트 추가
- 백엔드, 에이전트, 인프라에 SESSION_STORAGE_BUCKET_NAME 설정
- 프로젝트 페이지 로드 시 채팅 히스토리를 불러오도록 프론트엔드 업데이트
- 백엔드에 세션 스토리지 S3 읽기 권한 부여

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ Thumbs.db
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
 CLAUDE.md
+.env
 .env.local
 vitest.config.*.timestamp*
 /reports
