--- a/packages/agents/idp-agent/pyproject.toml
+++ b/packages/agents/idp-agent/pyproject.toml
@@ -5,14 +5,14 @@ description = "IDP Agent"
 requires-python = ">=3.12"
 readme = "README.md"
 dependencies = [
-  "aws-opentelemetry-distro==0.14.0",
-  "bedrock-agentcore==0.1.7",
-  "fastapi==0.123.0",
-  "boto3==1.42.0",
-  "mcp==1.22.0",
-  "strands-agents==1.18.0",
-  "strands-agents-tools==0.2.16",
-  "uvicorn==0.38.0"
+  "aws-opentelemetry-distro>=0.14.0",
+  "bedrock-agentcore>=0.1.7",
+  "fastapi>=0.123.0",
+  "boto3>=1.42.0",
+  "mcp>=1.22.0",
+  "strands-agents>=1.22.0",
+  "strands-agents-tools>=0.2.16",
+  "uvicorn>=0.38.0"
 ]
 
 [build-system]
