--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
 [tool.uv.workspace]
 members = [
   "packages/agents/idp-agent",
-  "packages/backend"
+  "packages/backend",
+  "packages/agents/bidi-agent",
 ]
 
 [tool.uv.sources."idp_v2.backend"]
