feat: tool support

--- a/packages/agents/idp-agent/pyproject.toml
+++ b/packages/agents/idp-agent/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "fastapi>=0.123.0",
   "boto3>=1.42.0",
   "mcp>=1.22.0",
+  "pydantic-settings>=2.0.0",
   "strands-agents>=1.22.0",
   "strands-agents-tools>=0.2.16",
   "uvicorn>=0.38.0"
