--- a/packages/backend/pyproject.toml
+++ b/packages/backend/pyproject.toml
@@ -40,6 +40,7 @@ requires-python = ">=3.12"
 readme = "README.md"
 dependencies = [
   "boto3>=1.42.0",
+  "duckdb>=1.0.0",
   "fastapi[standard]>=0.123.0",
   "kiwipiepy>=0.22.2",
   "lancedb>=0.26.0",
