--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "esbuild": "0.27.0",
     "hono": "^4.11.3",
     "hono-openapi": "^1.1.2",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "nanoid": "^5.1.6",
     "oidc-client-ts": "3.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-i18next": "^16.5.3",
     "react-markdown": "^10.1.0",
     "react-oidc-context": "3.3.0",
     "remark-gfm": "^4.0.1",
