--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-i18next": "^16.5.3",
     "react-markdown": "^10.1.0",
     "react-oidc-context": "3.3.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "source-map-support": "0.5.21",
     "tailwindcss": "4.1.17",
