--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "@ark-ui/react": "^5.30.0",
     "@aws-cdk/aws-lambda-python-alpha": "2.233.0-alpha.0",
     "@aws-crypto/sha256-browser": "^5.2.0",
-    "@aws-sdk/client-s3": "^3.965.0",
+    "@aws-sdk/client-s3": "^3.972.0",
     "@aws-sdk/client-ssm": "^3.958.0",
     "@aws-sdk/credential-providers": "^3.965.0",
+    "@aws-sdk/s3-request-presigner": "^3.972.0",
     "@aws/nx-plugin": "0.64.1",
     "@hono/node-server": "^1.19.7",
     "@hono/standard-validator": "^0.2.1",
     "@hono/swagger-ui": "^0.5.3",
     "@lancedb/lancedb": "^0.23.0",
-    "@smithy/protocol-http": "^5.3.7",
-    "@smithy/signature-v4": "^5.3.7",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-router": "1.139.7",
     "@valibot/to-json-schema": "^1.5.0",
