--- a/packages/backend/pyproject.toml
+++ b/packages/backend/pyproject.toml
@@ -35,6 +35,7 @@ reportCallInDefaultInitializer = false
 reportInvalidTypeForm = false
 reportAny = false
 reportMissingParameterType = false
+reportImplicitOverride = false
 
 [tool.ruff]
 exclude = [ ".ruff_cache", ".svn", ".tox", ".venv", "dist" ]
@@ -64,6 +65,8 @@ dependencies = [
   "pydantic>=2.12.5",
   "pydantic-settings>=2.0.0",
   "sentence-transformers>=5.2.0",
+  "sniffio>=1.3.1",
+  "valkey-glide>=2.0.1",
 ]
 
 [build-system]
