--- a/package.json
+++ b/package.json
@@ -98,5 +98,10 @@
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "^4.0.16"
   },
-  "type": "module"
+  "type": "module",
+  "pnpm": {
+    "overrides": {
+      "qs": ">=6.14.1"
+    }
+  }
 }
