--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
   "type": "module",
   "pnpm": {
     "overrides": {
-      "qs": ">=6.14.1"
+      "qs": ">=6.14.1",
+      "tar": ">=7.5.4"
     }
   }
 }
