feat: websocket messages for sessions (#33)
* feat: save, delete connection id

* feat: add default route for later

* feat: save connid mapping with sub - username

* feat: send message for sessions create

--- a/packages/lambda/websocket/package.json
+++ b/packages/lambda/websocket/package.json
@@ -12,7 +12,11 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.974.0",
+    "@aws-sdk/lib-dynamodb": "^3.974.0",
+    "iovalkey": "^0.3.3"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
     "@types/node": "^22.19.1",
