--- a/packages/lambda/session_workers/package.json
+++ b/packages/lambda/session_workers/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.972.0",
     "@aws-sdk/client-s3": "^3.958.0",
     "ioredis": "^5.6.1",
+    "iovalkey": "^0.3.3",
     "nanoid": "^5.1.5"
   },
   "devDependencies": {
