--- a/packages/lambda/artifact-mcp/package.json
+++ b/packages/lambda/artifact-mcp/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.975.0",
     "@aws-sdk/client-dynamodb": "^3.972.0",
     "@aws-sdk/client-s3": "^3.972.0",
     "@aws-sdk/lib-dynamodb": "^3.972.0",
     "@aws-sdk/s3-request-presigner": "^3.972.0",
+    "iovalkey": "^0.3.3",
     "nanoid": "^5.1.6"
   },
   "devDependencies": {
