--- a/packages/lambda/search-mcp/package.json
+++ b/packages/lambda/search-mcp/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.958.0",
     "@aws-sdk/client-ssm": "^3.958.0",
     "aws4fetch": "^1.0.20",
     "iovalkey": "^0.3.3"
