Switch binfmt image to ECR Public (Docker Hub rate limit)

--- a/deploy-codebuild.yml
+++ b/deploy-codebuild.yml
@@ -106,7 +106,7 @@ Resources:
               commands:
                 - npm install -g pnpm aws-cdk@latest
                 - pip install uv
-                - docker run --rm --privileged tonistiigi/binfmt --install amd64
+                - docker run --rm --privileged public.ecr.aws/eks-distro-build-tooling/binfmt-misc:qemu-v7.0.0 --install amd64
             pre_build:
               commands:
                 - git clone $REPO_URL /tmp/project
