--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ workspace = true
 [tool.uv.sources."idp_v2.idp_agent"]
 workspace = true
 
+[tool.uv.sources."idp_v2.research-agent"]
+workspace = true
+
 [dependency-groups]
 dev = [
   "ruff>=0.8.2",
