fix: move pip install uv after .python-version override to install under Python 3.13

--- a/deploy-codebuild.yml
+++ b/deploy-codebuild.yml
@@ -112,6 +112,7 @@ Resources:
                 - cd /tmp/project
                 - git checkout $VERSION
                 - find /tmp/project -name ".python-version" -exec sh -c 'echo "3.13" > "$1"' _ {} \;
+                - pip install uv
                 - pnpm install --frozen-lockfile
             build:
               commands:
