fix: skip cdk synth in build step, use cdk deploy directly for first-time deployment

--- a/deploy-codebuild.yml
+++ b/deploy-codebuild.yml
@@ -117,7 +117,7 @@ Resources:
             build:
               commands:
                 - cd /tmp/project
-                - pnpm nx build @idp-v2/infra
+                - pnpm nx run-many -t lint,compile,test -p @idp-v2/infra
                 - |
                   STACK_STATUS=$(aws cloudformation describe-stacks --stack-name CDKToolkit --query 'Stacks[0].StackStatus' --output text 2>/dev/null || echo "NOT_FOUND")
                   if [ "$STACK_STATUS" = "NOT_FOUND" ] || [ "$STACK_STATUS" = "ROLLBACK_COMPLETE" ]; then
@@ -125,7 +125,7 @@ Resources:
                     aws cloudformation wait stack-delete-complete --stack-name CDKToolkit 2>/dev/null || true
                     pnpm nx bootstrap @idp-v2/infra
                   fi
-                - pnpm nx deploy-ci @idp-v2/infra
+                - cd packages/infra && cdk deploy --all --require-approval=never
             post_build:
               commands:
                 - |
