fix: deploy VpcStack first to create SSM params before deploying all stacks

--- a/deploy-codebuild.yml
+++ b/deploy-codebuild.yml
@@ -125,6 +125,7 @@ Resources:
                     aws cloudformation wait stack-delete-complete --stack-name CDKToolkit 2>/dev/null || true
                     npx cdk bootstrap aws://$AWS_ACCOUNT_ID/$AWS_DEFAULT_REGION --require-approval never
                   fi
+                - cd packages/infra && npx cdk deploy IDP-V2-Vpc --require-approval=never
                 - cd packages/infra && npx cdk deploy --all --require-approval=never
             post_build:
               commands:
