fix: use email prefix as Cognito username to avoid email alias format error

--- a/deploy-codebuild.yml
+++ b/deploy-codebuild.yml
@@ -133,16 +133,17 @@ Resources:
                     --query 'Stacks[0].Outputs[?contains(OutputKey,`UserPoolId`)].OutputValue' --output text 2>/dev/null)
                   if [ -n "$USER_POOL_ID" ] && [ "$USER_POOL_ID" != "None" ]; then
                     TEMP_PASSWORD="TempPass123!"
-                    EXISTING=$(aws cognito-idp admin-get-user --user-pool-id "$USER_POOL_ID" --username "$ADMIN_USER_EMAIL" 2>/dev/null && echo "exists" || echo "")
+                    ADMIN_USERNAME=$(echo "$ADMIN_USER_EMAIL" | cut -d'@' -f1)
+                    EXISTING=$(aws cognito-idp admin-get-user --user-pool-id "$USER_POOL_ID" --username "$ADMIN_USERNAME" 2>/dev/null && echo "exists" || echo "")
                     if [ -z "$EXISTING" ]; then
                       aws cognito-idp admin-create-user \
                         --user-pool-id "$USER_POOL_ID" \
-                        --username "$ADMIN_USER_EMAIL" \
+                        --username "$ADMIN_USERNAME" \
                         --user-attributes Name=email,Value="$ADMIN_USER_EMAIL" Name=email_verified,Value=true Name=given_name,Value=Admin Name=family_name,Value=User \
                         --temporary-password "$TEMP_PASSWORD"
-                      echo "Admin user created: $ADMIN_USER_EMAIL"
+                      echo "Admin user created: $ADMIN_USERNAME ($ADMIN_USER_EMAIL)"
                     else
-                      echo "Admin user already exists: $ADMIN_USER_EMAIL"
+                      echo "Admin user already exists: $ADMIN_USERNAME"
                     fi
                     echo "ADMIN_EMAIL=$ADMIN_USER_EMAIL"
                     echo "TEMP_PASSWORD=$TEMP_PASSWORD"
