fix: use QEMU aarch64 emulation for Agent ARM64 build on x86 CodeBuild

--- a/deploy-codebuild.yml
+++ b/deploy-codebuild.yml
@@ -105,6 +105,7 @@ Resources:
                 python: 3.13
               commands:
                 - npm install -g pnpm aws-cdk@latest
+                - docker run --rm --privileged public.ecr.aws/eks-distro-build-tooling/binfmt-misc:qemu-v7.0.0 --install aarch64
             pre_build:
               commands:
                 - git clone $REPO_URL /tmp/project
