--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
     "nanoid": "^5.1.6",
     "oidc-client-ts": "3.4.1",
     "react": "19.2.0",
