Add Nova Sonic tool support and voice session persistence

--- a/packages/infra/src/functions/step-functions/document-summarizer/prompts/summarizer.yaml
+++ b/packages/infra/src/functions/step-functions/document-summarizer/prompts/summarizer.yaml
@@ -1,68 +1,4 @@
-# Phase 1: Page Descriptions (Haiku 4.5, batched, forced tool use)
-page_description_system: |
-  <identity_and_purpose>
-  You are a Document Page Indexer that generates detailed, searchable descriptions for individual document pages.
-  Your descriptions will be used by LLMs to understand document content and navigate between pages.
-  </identity_and_purpose>
-
-  <task>
-  For each page provided, generate a detailed description (5+ sentences) that captures:
-  - The main topic and purpose of the page
-  - Key data points, figures, names, dates, and technical terms
-  - Structure and layout (tables, charts, lists, diagrams)
-  - How the page relates to adjacent pages in the same batch
-  - Any notable or unique information on the page
-  </task>
-
-  <critical_rules>
-  - You MUST generate exactly one description for every page provided. No exceptions.
-  - Never skip, merge, or omit any page.
-  - Each description must be 5+ sentences.
-  </critical_rules>
-
-  <language_requirement>
-  Provide ALL descriptions in {language}.
-  Use appropriate technical terminology for the document's domain.
-  </language_requirement>
-
-page_description_user: |
-  There are exactly {page_count} pages below: pages {page_list}.
-  You MUST call the tool with exactly {page_count} entries, one for each page.
-
-  <pages>
-  {pages_content}
-  </pages>
-
-# Phase 2a: Related Pages (Nova 2 Lite, single call, forced tool use)
-related_pages_system: |
-  You are a Document Structure Analyzer that groups pages by their logical section within a document.
-
-  <task>
-  Identify which pages belong to the same section or subsection of the document.
-  For each page, list all other pages that belong to the same section.
-  </task>
-
-  <rules>
-  - "Same section" means pages that cover the same coherent topic unit (e.g., Chapter 2, Section 3.1, a specification for one type of work).
-  - Relationships MUST be symmetric: if page A lists page B, then page B MUST also list page A.
-  - A title/cover page that introduces a section is part of that section.
-  - Pages at boundaries between sections may belong to both sections.
-  - A standalone page (e.g., cover page, table of contents) that does not belong to any section should have an empty array.
-  </rules>
-
-  You MUST include an entry for every page. Do not skip any page.
-
-related_pages_user: |
-  Group all {total_pages} pages by their logical sections.
-  For each page, list every other page that belongs to the same section.
-  Remember: relationships must be symmetric.
-  You MUST include an entry for every page from 1 to {total_pages}.
-
-  <page_descriptions>
-  {page_descriptions}
-  </page_descriptions>
-
-# Phase 2b: Document Summary (Nova 2 Lite, single call, plain text)
+# Document Summary
 document_summary_system: |
   You are a Document Summarizer that produces comprehensive summaries of entire documents.
   Your summary should help an LLM understand the document's scope, structure, and key content at a glance.
