--- a/packages/agents/bidi-agent/pyproject.toml
+++ b/packages/agents/bidi-agent/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "uvicorn>=0.34.0",
     "pydantic-settings>=2.0.0",
     "boto3>=1.35.0",
+    "pytz>=2024.1",
 ]
 
 [tool.setuptools]
-py-modules = ["main", "config"]
+py-modules = ["main", "config", "tools"]
