--- a/packages/agents/webcrawler-agent/pyproject.toml
+++ b/packages/agents/webcrawler-agent/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aws-opentelemetry-distro>=0.14.2",
+    "beautifulsoup4>=4.12.0",
     "bedrock-agentcore>=1.1.0,<1.2.0",
     "boto3>=1.42.36",
+    "lxml>=5.0.0",
     "nanoid>=2.0.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
